unpackaged/main/default/objects/Default_State_PTA__mdt/Default_State_PTA__mdt.object-meta.xml
<CustomObject>
    <description>Will show member our promise time of arrival in triage when case is submitted.</description>
    <label>Default State PTA</label>
    <pluralLabel>Default State PTAs</pluralLabel>
</CustomObject>