unpackaged/main/default/objects/Default_State_PTA__mdt/fields/PTA__c.field-meta.xml
<CustomField>
    <fullName>PTA__c</fullName>
    <label>PTA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>