unpackaged/main/default/objects/Default_State_PTA__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Vehicle Lockout</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Extrication</fullName>
            </value>
            <value>
                <fullName>Home Lockout</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Extrication Tow Only</fullName>
            </value>
            <value>
                <fullName>Battery Test</fullName>
            </value>
            <value>
                <fullName>Light Service</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
                <isActive>false</isActive>
                <label>Full Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>