unpackaged/main/default/objects/Default_State_PTA__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AL</fullName>
                <default>true</default>
                <label>AL</label>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>NM</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>RI</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>VT</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>